<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    android:gravity = "center_horizontal"
    android:orientation = "vertical"
    tools:context = "com.shanshan.flightmanager.ActivityUserLogin">

    <Toolbar
        android:title="@string/user_login_title"
        android:background="@color/skyBlue"
        android:id="@+id/user_login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <!-- Login progress -->
    <ProgressBar
        android:layout_below="@id/user_login_toolbar"
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignBottom="@+id/user_login_toolbar"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_below="@+id/user_login_toolbar"
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="328dp"
        android:layout_toEndOf="@+id/login_progress">

    </ScrollView>

    <RelativeLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_alignTop="@+id/login_form"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_alignBottom="@+id/login_form">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_below="@+id/email"
            android:layout_alignParentStart="true"
            android:layout_marginTop="19dp" />

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            android:layout_below="@+id/password"
            android:layout_alignParentStart="true"
            android:layout_marginTop="28dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="新用户点此注册"
            android:id="@+id/sign_up"
            android:layout_below="@+id/email_sign_in_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

    </RelativeLayout>

</RelativeLayout>
